--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Blockpool Delegate Reward</title>
+    <style>
+      .MuiCard-root-171 {
+        overflow: unset !important;
+      }
+    </style>
   </head>
   <body>
     <noscript>
