Initial routing and page layouts for delegates/round screen

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
       .MuiCard-root-171 {
         overflow: unset !important;
       }
+
+      header a:visited {
+        color: #fff;
+      }
     </style>
   </head>
   <body>
