bundle.js now resolves properly on delegate screen

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
     <div id="root"></div>
     <style id="jss-server-side"></style>
 
-    <script src="bundle.js" defer></script>
+    <script src="/bundle.js" defer></script>
   </body>
 </html>
